--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
           python-version: "3.7.x"
       - name: Install Poetry and dependencies
         run: |
-          python3.7 -m install poetry
+          python3.7 -m pip install poetry
           poetry install --no-interaction --no-ansi --no-dev
           dbt deps
