--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,8 @@ jobs:
       - name: Install Poetry and dependencies
         run: |
           python3.7 -m pip install poetry
+          poetry config virtualenvs.create false
           poetry install --no-interaction --no-ansi --no-dev
-          dbt deps
+      - name: Install dbt dependencies
+        run: dbt deps
+      
