--- a/profiles.yml
+++ b/profiles.yml
@@ -6,12 +6,12 @@ analytics:
   outputs:
     ci:
       type: postgres
-      host: "{{ env_var('HOST_NAME') }}"
-      user: "{{ env_var('USERNAME') }}"
-      pass: "{{ env_var('PASSWORD') }}"
+      host: env_var('HOST_NAME')
+      user: env_var('USERNAME')
+      pass: env_var('PASSWORD')
       port: 5432
-      dbname: "{{ env_var('DBNAME') }}"
-      schema: "{{ env_var('CISCHEMA') }}"
+      dbname: env_var('DBNAME')
+      schema: env_var('CISCHEMA')
       threads: 1
       keepalives_idle: 300 # default 0, indicating the system default
       search_path: "staging"
