--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,14 @@ on:
 
 env:
   DBT_PROFILES_DIR: ./
-  HOST_NAME: "{{ secrets.HOST_NAME}}"
-  USERNAME: "{{ secrets.USERNAME}}"
+  # HOST_NAME: "{{ secrets.HOST_NAME}}"
+  HOST_NAME: "database.cwnisnos02my.us-east-2.rds.amazonaws.com"
+  USERNAME: "{{ secrets.USERNAME }}"
   PASSWORD: "{{ secrets.PASSWORD}}"
-  DBNAME: "{{ secrets.DBNAME}}"
-  CISCHEMA: "{{ secrets.CISCHEMA}}"
+  # DBNAME: "{{ secrets.DBNAME}}"
+  DBNAME: "analytics"
+  # CISCHEMA: "{{ secrets.CISCHEMA}}"
+  CISCHEMA: "development"
   PRODSCHEMA: "{{secrets.PRODSCHEMA}}"
 
 jobs:
