--- a/profiles.yml
+++ b/profiles.yml
@@ -7,25 +7,25 @@ analytics:
     ci:
       type: postgres
       host: "{{ env_var('HOST_NAME') }}"
-      user: "{{ env_var('USERNAME') }}"
-      pass: "{{ env_var('PASSWORD') }}"
+      user: "{{ secrets.USERNAME }}"
+      pass: "{{ secrets.PASSWORD }}"
       port: 5432
       dbname: "{{ env_var('DBNAME') }}"
       schema: "{{ env_var('CISCHEMA') }}"
       threads: 1
       keepalives_idle: 300 # default 0, indicating the system default
       search_path: "staging"
-    prod:
-      type: postgres
-      host: "{{ env_var('HOST_NAME') }}"
-      user: "{{ env_var('USERNAME') }}"
-      pass: "{{ env_var('PASSWORD') }}"
-      port: 5432
-      dbname: "{{ env_var('DBNAME') }}"
-      schema: "{{ env_var('PRODSCHEMA') }}"
-      threads: 1
-      keepalives_idle: 300 # default 0, indicating the system default
-      search_path: "staging"
+    # prod:
+    #   type: postgres
+    #   host: "{{ env_var('HOST_NAME') }}"
+    #   user: "{{ env_var('USERNAME') }}"
+    #   pass: "{{ env_var('PASSWORD') }}"
+    #   port: 5432
+    #   dbname: "{{ env_var('DBNAME') }}"
+    #   schema: "{{ env_var('PRODSCHEMA') }}"
+    #   threads: 1
+    #   keepalives_idle: 300 # default 0, indicating the system default
+    #   search_path: "staging"
 
 config:
     send_anonymous_usage_stats: False
