--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,13 @@ env:
   DBT_PROFILES_DIR: ./
   # HOST_NAME: "{{ secrets.HOST_NAME}}"
   HOST_NAME: "database.cwnisnos02my.us-east-2.rds.amazonaws.com"
-  USERNAME: "{{ secrets.USERNAME }}"
-  PASSWORD: "{{ secrets.PASSWORD}}"
+  # USERNAME: "{{ secrets.USERNAME }}"
+  USERNAME: "foo"
+  PASSWORD: "foo"
+  # PASSWORD: "{{ secrets.PASSWORD }}"
   # DBNAME: "{{ secrets.DBNAME}}"
   DBNAME: "analytics"
-  # CISCHEMA: "{{ secrets.CISCHEMA}}" 
+  # CISCHEMA: "{{ secrets.CISCHEMA}}"
   CISCHEMA: "development"
   PRODSCHEMA: "{{secrets.PRODSCHEMA}}"
 
