--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ env:
   DBT_PROFILES_DIR: ./
   # HOST_NAME: "{{ secrets.HOST_NAME}}"
   HOST_NAME: "database.cwnisnos02my.us-east-2.rds.amazonaws.com"
-  # USERNAME: "{{ secrets.USERNAME }}"
-  USERNAME: "foo"
+  USERNAME: "{{ secrets.USERNAME }}"
+  # USERNAME: "foo"
   PASSWORD: "foo"
   # PASSWORD: "{{ secrets.PASSWORD }}"
   # DBNAME: "{{ secrets.DBNAME}}"
