--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,9 +53,9 @@ jobs:
         uses: nwtgck/actions-netlify@v1.0
         with:
           publish-dir: './target'
-          production-branch: master
-          # github-token: ${{ secrets.GITHUB_TOKEN }}
+          # production-branch: master
+          # github-token: ${{secrets.GITHUB_TOKEN}}
           deploy-message: "Deploy from GitHub Actions"
         env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{secrets.NETLIFY_AUTH_TOKEN }
+          NETLIFY_SITE_ID: ${{secrets.NETLIFY_SITE_ID}}
