--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,6 @@ jobs:
         uses: nwtgck/actions-netlify@v1.0
         with:
           publish-dir: './target'
-          # production-branch: master
+          production-branch: master
           # github-token: ${{secrets.GITHUB_TOKEN}}
           deploy-message: "Deploy from GitHub Actions"
