--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ env:
   DBNAME: ${{secrets.DBNAME}}
   CISCHEMA: ${{secrets.CISCHEMA}}
   PRODSCHEMA: ${{secrets.PRODSCHEMA}}
-  NETLIFY_AUTH_TOKEN: ${{secrets.NETLIFY_AUTH_TOKEN}}
-  NETLIFY_SITE_ID: ${{secrets.NETLIFY_SITE_ID}}
+  NETLIFY_AUTH_TOKEN: "${{secrets.NETLIFY_AUTH_TOKEN}}"
+  NETLIFY_SITE_ID: "{{secrets.NETLIFY_SITE_ID}}"
 
 jobs:
   build:
@@ -77,6 +77,6 @@ jobs:
         uses: nwtgck/actions-netlify@v1.0
         with:
           publish-dir: './target'
-          production-branch: master
+          # production-branch: master
           # github-token: ${{secrets.GITHUB_TOKEN}}
-          deploy-message: "Deploy from GitHub Actions"
+          # deploy-message: "Deploy from GitHub Actions"
