--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ env:
   DBNAME: ${{secrets.DBNAME}}
   CISCHEMA: ${{secrets.CISCHEMA}}
   PRODSCHEMA: ${{secrets.PRODSCHEMA}}
-  NETLIFY_AUTH_TOKEN: "${{secrets.NETLIFY_AUTH_TOKEN}}"
-  NETLIFY_SITE_ID: "{{secrets.NETLIFY_SITE_ID}}"
+  NETLIFY_AUTH_TOKEN: ${{secrets.NETLIFY_AUTH_TOKEN}}
+  NETLIFY_SITE_ID: ${{secrets.NETLIFY_SITE_ID}}
 
 jobs:
   build:
