added github token

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,3 +79,4 @@ jobs:
           publish-dir: './target'
           production-branch: master
           deploy-message: "Deploy from GitHub Actions"
+          github-token: ${{secrets.GITHUB_TOKEN}}
