--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,10 +42,6 @@ jobs:
         run: dbt deps
 
 
-      - name: Run debug to check for connectivity issues
-        run: dbt debug
-
-
       - name: Run tests against sources only
         run: dbt test -t ci --exclude example
 
@@ -58,25 +54,21 @@ jobs:
         run: dbt test -t ci --models example
 
 
-      - name: Deploy to production
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        run: |
-          dbt run -t prod
-          dbt test -t prod
-
-
       - name: Build Docs
         run: dbt docs generate
 
 
-      - name: show target
-        run: ls ./target
-
-
-      - name: Deploy to Netlify
+      - name: Deploy Docs
         uses: nwtgck/actions-netlify@v1.0
         with:
           publish-dir: './target'
           production-branch: master
           deploy-message: "Deploy from GitHub Actions"
           github-token: ${{secrets.GITHUB_TOKEN}}
+
+
+      - name: Deploy to production
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        run: |
+          dbt run -t prod
+          dbt test -t prod
